--- a/tokyo-night.theme.css
+++ b/tokyo-night.theme.css
@@ -1,4 +1,4 @@
-@import url("https://dyzean.github.io/Tokyo-Night/main.css");
+@import url("https://rstar284.github.io/Tokyo-Night-Discord/main.css");
 
 @import url("https://mr-miner1.github.io/cooler-activity-status/activity-cards.theme.css");
 @import url("https://nyri4.github.io/Discolored/main.css");
